Added support for different CO2/price areas

--- a/01_Analyze.ipynb
+++ b/01_Analyze.ipynb
@@ -12,7 +12,8 @@
       "source": [
         "import pandas as pd\n",
         "import glob\n",
-        "from functools import reduce"
+        "from functools import reduce\n",
+        "import yaml"
       ]
     },
     {
@@ -41,28 +42,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "price = (\n",
-        "    pd.read_csv(\"data/price.csv\")\n",
-        "    .assign(time=lambda df: pd.to_datetime(df.time, utc=True))\n",
-        "    .set_index(\"time\")\n",
-        ")\n",
-        "\n",
-        "co2 = (\n",
-        "    pd.read_csv(\"data/co2.csv\")\n",
-        "    .assign(time=lambda df: pd.to_datetime(df.time, utc=True))\n",
-        "    .set_index(\"time\")\n",
-        ")\n",
-        "\n",
-        "market = pd.merge(price, co2, how=\"inner\", left_index=True, right_index=True)\n",
-        "market"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "gather": {
           "logged": 1650978972394
@@ -79,7 +58,8 @@
       },
       "outputs": [],
       "source": [
-        "portfolios = pd.read_csv(\"data/portfolios.csv\")\n",
+        "with open(\"data/portfolios.yml\", \"r\") as fp:\n",
+        "    portfolios = yaml.load(fp, Loader=yaml.SafeLoader)\n",
         "portfolios"
       ]
     },
@@ -102,10 +82,22 @@
       },
       "outputs": [],
       "source": [
-        "def read_portfolio(portfolios: pd.DataFrame, id: str) -> pd.DataFrame:\n",
+        "def read_portfolio(portfolio) -> pd.DataFrame:\n",
+        "    price = (\n",
+        "        pd.read_csv(f\"data/price/{portfolio['area']}.csv\")\n",
+        "        .assign(time=lambda df: pd.to_datetime(df.time, utc=True))\n",
+        "        .set_index(\"time\")\n",
+        "    )\n",
+        "\n",
+        "    co2 = (\n",
+        "        pd.read_csv(f\"data/co2/{portfolio['area']}.csv\")\n",
+        "        .assign(time=lambda df: pd.to_datetime(df.time, utc=True))\n",
+        "        .set_index(\"time\")\n",
+        "    )\n",
+        "\n",
         "    data = []\n",
-        "    for index, row in portfolios.query(\"id == @id\").iterrows():\n",
-        "        path = f\"data/sites/{row.site}.csv\"\n",
+        "    for site in portfolio[\"sites\"]:\n",
+        "        path = f\"data/sites/{site}.csv\"\n",
         "        df = (\n",
         "            pd.read_csv(\n",
         "                path,\n",
@@ -122,6 +114,8 @@
         "    output = (\n",
         "        reduce(lambda a, b: a + b, data)\n",
         "        .rename({\"electricity\": \"res\"}, axis=1)\n",
+        "        .merge(price, how=\"inner\", left_index=True, right_index=True)\n",
+        "        .merge(co2, how=\"inner\", left_index=True, right_index=True)\n",
         "    )\n",
         "    return output\n"
       ]
@@ -189,10 +183,9 @@
       },
       "outputs": [],
       "source": [
-        "for id in portfolios[\"id\"].unique():\n",
-        "    res = read_portfolio(portfolios, id)\n",
+        "for portfolio in portfolios:\n",
         "    data = (\n",
-        "        pd.merge(market, res, how=\"inner\", left_index=True, right_index=True)\n",
+        "        read_portfolio(portfolio)\n",
         "        .dropna()\n",
         "        .assign(\n",
         "            res=lambda df: df.res / df.res.sum() * CONSUMPTION_SIZE,\n",
@@ -210,10 +203,9 @@
         "    results = results.reset_index().assign(time=lambda df: df.time.dt.tz_localize(None))\n",
         "    summary = compute_summary(results)\n",
         "\n",
-        "    writer = pd.ExcelWriter(f\"output/reports/{id}.xlsx\")\n",
-        "    summary.to_excel(writer, sheet_name=\"Summary\", index=False, header=False)\n",
-        "    results.to_excel(writer, sheet_name=\"Data\", index=False)\n",
-        "    writer.save()"
+        "    with pd.ExcelWriter(f\"output/reports/{portfolio['name']}.xlsx\") as writer:\n",
+        "        summary.to_excel(writer, sheet_name=\"Summary\", index=False, header=False)\n",
+        "        results.to_excel(writer, sheet_name=\"Data\", index=False)"
       ]
     }
   ],
