--- a/02_Plot.ipynb
+++ b/02_Plot.ipynb
@@ -11,7 +11,8 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import plotnine as p9"
+        "import plotnine as p9\n",
+        "import yaml"
       ]
     },
     {
@@ -55,7 +56,9 @@
       },
       "outputs": [],
       "source": [
-        "portfolios = pd.read_csv(\"data/portfolios.csv\")"
+        "with open(\"data/portfolios.yml\", \"r\") as fp:\n",
+        "    portfolios = yaml.load(fp, Loader=yaml.SafeLoader)\n",
+        "portfolios"
       ]
     },
     {
@@ -79,13 +82,14 @@
       "source": [
         "data = []\n",
         "\n",
-        "for id in portfolios.id.unique():\n",
+        "for portfolio in portfolios:\n",
+        "    id = portfolio[\"name\"]\n",
         "    summary = pd.read_excel(f\"output/reports/{id}.xlsx\", sheet_name=\"Summary\", header=None)\n",
         "    df = pd.DataFrame([\n",
-        "        dict(portfolio=id.upper(), profile=\"flat\", metric=\"CO2\", value=summary.iloc[0,1]),\n",
-        "        dict(portfolio=id.upper(), profile=\"tracking\", metric=\"CO2\", value=summary.iloc[1,1]),\n",
-        "        dict(portfolio=id.upper(), profile=\"flat\", metric=\"cost\", value=summary.iloc[4,1]),\n",
-        "        dict(portfolio=id.upper(), profile=\"tracking\", metric=\"cost\", value=summary.iloc[5,1]),\n",
+        "        dict(portfolio=id, profile=\"flat\", metric=\"CO2\", value=summary.iloc[0,1]),\n",
+        "        dict(portfolio=id, profile=\"tracking\", metric=\"CO2\", value=summary.iloc[1,1]),\n",
+        "        dict(portfolio=id, profile=\"flat\", metric=\"cost\", value=summary.iloc[4,1]),\n",
+        "        dict(portfolio=id, profile=\"tracking\", metric=\"cost\", value=summary.iloc[5,1]),\n",
         "    ])\n",
         "    data.append(df)\n",
         "\n",
@@ -175,7 +179,8 @@
       },
       "outputs": [],
       "source": [
-        "for id in portfolios.id.unique():\n",
+        "for portfolio in portfolios:\n",
+        "    id = portfolio[\"name\"]\n",
         "    df = pd.read_excel(f\"output/reports/{id}.xlsx\", sheet_name=\"Data\")\n",
         "    fig = (\n",
         "        p9.ggplot(p9.aes(x=\"profile\", y=\"co2\"), df) +\n",
@@ -193,7 +198,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "for id in portfolios.id.unique():\n",
+        "for portfolio in portfolios:\n",
+        "    id = portfolio[\"name\"]\n",
         "    df = pd.read_excel(f\"output/reports/{id}.xlsx\", sheet_name=\"Data\")\n",
         "    fig = (\n",
         "        p9.ggplot(p9.aes(x=\"profile\", y=\"price\"), df) +\n",
