--- a/01_Analyze.ipynb
+++ b/01_Analyze.ipynb
@@ -118,7 +118,7 @@
     "        .merge(price, how=\"inner\", left_index=True, right_index=True)\n",
     "        .merge(co2, how=\"inner\", left_index=True, right_index=True)\n",
     "    )\n",
-    "    return output\n"
+    "    return output"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   },
   "microsoft": {
    "host": {
@@ -246,5 +246,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
